--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ winit = "0.26"
 env_logger = "0.9"
 log = "0.4"
 wgpu = "0.13"
-
+bytemuck = { version = "1.4.1", features = [ "derive" ] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
@@ -30,3 +30,4 @@ web-sys = { version = "0.3", features = [
     "Window",
     "Element",
 ]}
+
