--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/moonseokchoi-kr/tiny-renderer-rust"
 crate-type=["cdylib","rlib"]
 
 [dependencies]
+image = {version = "0.24.3", default_features = false, features = ["png","jpeg"]}
 pollster = "0.2.0"
 cfg-if = "1"
 # the other regular dependencies...
@@ -18,6 +19,7 @@ env_logger = "0.9"
 log = "0.4"
 wgpu = "0.13"
 bytemuck = { version = "1.4.1", features = [ "derive" ] }
+anyhow = "1.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
@@ -30,4 +32,5 @@ web-sys = { version = "0.3", features = [
     "Window",
     "Element",
 ]}
+
 
