--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,8 @@ env_logger = "0.9"
 log = "0.4"
 wgpu = "0.13"
 bytemuck = { version = "1.4.1", features = [ "derive" ] }
-anyhow = "1.0"
+anyhow = "1.0.58"
+cgmath = "0.18"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
