--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,15 @@ image = {version = "0.24.3", default_features = false, features = ["png","jpeg"]
 pollster = "0.2.0"
 cfg-if = "1"
 # the other regular dependencies...
-winit = "0.26"
+raw-window-handle = "0.5.0"
+winit = "0.26.1"
 env_logger = "0.9"
 log = "0.4"
 wgpu = "0.13"
 bytemuck = { version = "1.4.1", features = [ "derive" ] }
 anyhow = "1.0.58"
 cgmath = "0.18"
+tobj = {version = "3.2.1", features = ["async"]}
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
@@ -33,5 +35,10 @@ web-sys = { version = "0.3", features = [
     "Window",
     "Element",
 ]}
+
+[build-dependencies]
+anyhow = "1.0.0"
+fs_extra = "1.2"
+glob = "0.3"
 
 
