--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,17 +23,21 @@ bytemuck = { version = "1.4.1", features = [ "derive" ] }
 anyhow = "1.0.58"
 cgmath = "0.18"
 tobj = {version = "3.2.1", features = ["async"]}
+instant = "0.1"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
+reqwest = { version = "0.11" }
 console_error_panic_hook = "0.1.6"
 console_log = "0.2.0"
 wgpu = { version = "0.13", features = ["webgl"]}
-wasm-bindgen = "0.2"
+wasm-bindgen = "0.2.76"
 wasm-bindgen-futures = "0.4.30"
-web-sys = { version = "0.3", features = [
+web-sys = { version = "0.3.59", features = [
     "Document",
     "Window",
     "Element",
+    "Location",
+    "console",
 ]}
 
 [build-dependencies]
